# webserv

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt  TODO_AND_RESUME.txt  a.out  editing.avanterules  main.cpp  planning.avanterules  suggesting.avanterules  update_makefile.sh
.bak/: Makefile.bak
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_010.txt  task_011.txt  tasks.json  tasks.json.bak
config_files/: default.conf  erreur.conf  exconfig.conf  mini.conf  minimalist.conf  valid_complex.conf  webserv.conf
include/: webserv.h  webserv.hpp
rules/42-tutor/: adaptive_teaching_behavior.md  direct_solution_constraint.md  external_references.md  formatting_coding_style_guidelines.md  main.md  mcp_tools_integration.md  qcm_generation.md  socratic_debugging.md  theory_explanation_strategy.md
scripts/: PRD.txt  task-complexity-report.json  tutor.avanterules
src/: readFileToString.cpp
src/class/: Callback.cpp  Callback.hpp  CallbackManager.cpp  CallbackManager.hpp  CallbackQueue.cpp  CallbackQueue.hpp  ClassName.hpp  ClientSocket.cpp  ClientSocket.hpp  Config.cpp  Config.hpp  ConfigValidator.cpp  ConfigValidator.hpp  ErrorHandler.cpp  ErrorHandler.hpp  HttpException.cpp  HttpException.hpp  HttpLimits.hpp  HttpParser.cpp  HttpParser.hpp  HttpParser_utils.cpp  HttpParser_utils.hpp  HttpRequest.cpp  HttpRequest.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  RequestLine.hpp  RouteConfig.cpp  RouteConfig.hpp  Server.cpp  Server.hpp  Server.utils.cpp  ServerConfig.cpp  ServerConfig.hpp  ServerSocket.cpp  ServerSocket.hpp  Socket.cpp  Socket.hpp  (+6 more)
src/class/Callbacks/: AcceptCallback.cpp  AcceptCallback.hpp  (+17 more)
tasks/: TASK_1.md  task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
test/class/: CallbackAdditionalTest.cpp  CallbackManagerAdditionalTest.cpp  CallbackManagerTest.cpp  CallbackQueueAdditionalTest.cpp  CallbackQueueTest.cpp  CallbackTest.cpp  ClientSocketAdditionalTest.cpp  ClientSocketTest.cpp  ConfigTest.cpp  ConfigValidatorTest.cpp  ErrorHandlerTest.cpp  HttpParserTest.cpp  LexerTest.cpp  ListeningSocketAdditionalTest.cpp  ListeningSocketTest.cpp  ParserTest.cpp  RequestDataTest.cpp  RequestValidatorTest.cpp  ServerSocketAdditionalTest.cpp  ServerSocketTest.cpp  ServerTest.cpp  SocketAdditionalTest.cpp  SocketManagerTest.cpp  SocketTest.cpp  TimerTest.cpp  TmpClassTest.cpp
tests/: test_error_handler.cpp
www/: index.html  index2.html  server_config.txt
www/cgi-bin/: echo.sh
www/errors/: 404.html
www/html/: test1.txt  test2.txt
www/prout/: script.py
(+70 files in other folders)
